# embedded-wireless-framework

./: .gitignore  .gitmodules  PREVIEW-WARNING.md  README.md
docs/: Doxyfile  (+1 more)
examples/Linux/: .gitignore  CMakeLists.txt  README.md  README_WSL.md
examples/Linux/sample_azure_iot_embedded_sdk/: CMakeLists.txt  sample_config.h
examples/Linux/sample_azure_iot_embedded_sdk_pnp/: CMakeLists.txt
examples/Linux/sample_ewf_info_pthread_bsd_sockets/: CMakeLists.txt  sample_info.c
examples/Linux/sample_ewf_info_tx_bsd_sockets/: CMakeLists.txt  sample_info.c
examples/Linux/sample_ewf_netx_duo_test_bg96/: CMakeLists.txt  sample_netx_duo_test.c
examples/Linux/sample_ewf_netx_duo_test_bsd_sockets/: CMakeLists.txt  sample_netx_duo_test.c
examples/Linux/sample_ewf_telemetry_basic_tx_bg96/: CMakeLists.txt
examples/Linux/sample_ewf_telemetry_basic_tx_bsd_sockets/: CMakeLists.txt  sample_telemetry.c
examples/Linux/sample_ewf_test_pthread_bsd_sockets/: CMakeLists.txt  ewf.config.h  ewf_example.config.h  sample_test.c
examples/Linux/sample_ewf_test_tx_bg96/: CMakeLists.txt  sample_test.c
examples/Linux/sample_ewf_test_tx_bsd_sockets/: CMakeLists.txt  ewf.config.h  ewf_example.config.h  sample_test.c
examples/Linux/sample_netx_duo_iperf/: CMakeLists.txt  sample_netx_duo_iperf.c
examples/Linux/sample_pnp_temperature_controller/: CMakeLists.txt
examples/Linux/sample_threadx/: CMakeLists.txt  main.c
examples/Linux/tcpip_offload_driver/: CMakeLists.txt  network_config.cmake  network_config.ps1  nx_driver_x86.c
examples/WIN32/: .gitignore  CMakeLists.txt  README.md  README_LWIP_PPP.md  README_NETXDUO_PPP.md  README_PPP.md
examples/WIN32/cmake/: win32.cmake
examples/WIN32/freertos/: tasks.c
examples/WIN32/sample_azure_iot_embedded_sdk/: sample_config.h
examples/WIN32/sample_ewf_azure_iot_pnp_provisioning_tx_bg96/: CMakeLists.txt  ewf.config.h  ewf_example.config.h  sample_pnp_provisioning_telemetry.c
examples/WIN32/sample_ewf_azure_iot_provisioning_tx_bg96/: CMakeLists.txt  ewf_example.config.h  sample_provisioning_telemetry.c
examples/WIN32/sample_ewf_certs_basic_freertos_bg95/: CMakeLists.txt  ewf_example.config.h  main.c
examples/WIN32/sample_ewf_certs_basic_freertos_bg96/: CMakeLists.txt  ewf_example.config.h  main.c
examples/WIN32/sample_ewf_certs_basic_tx_bg95/: CMakeLists.txt  ewf.config.h  ewf_example.config.h  ewf_example.config.h.andres  sample_certs.c
examples/WIN32/sample_ewf_certs_basic_tx_bg96/: CMakeLists.txt  ewf_example.config.h  sample_certs.c
examples/WIN32/sample_ewf_certs_basic_tx_ryz014/: CMakeLists.txt  ewf_example.config.h  sample_certs.c
examples/WIN32/sample_ewf_certs_basic_tx_ryz024a/: CMakeLists.txt  ewf_example.config.h  sample_certs.c
examples/WIN32/sample_ewf_certs_basic_win32_bg95/: CMakeLists.txt  ewf_example.config.h  sample_certs.c
examples/WIN32/sample_ewf_certs_basic_win32_bg96/: CMakeLists.txt  ewf.config.h  ewf_example.config.h  sample_certs.c
examples/WIN32/sample_ewf_certs_tx_bg96/: CMakeLists.txt  ewf.config.h  ewf_example.config.h  sample_certs.c
examples/WIN32/sample_ewf_certs_tx_winsock2/: CMakeLists.txt  ewf.config.h  ewf_example.config.h  sample_certs.c
examples/WIN32/sample_ewf_certs_win32_winsock2/: CMakeLists.txt  sample_certs.c
examples/WIN32/sample_ewf_info_freertos_bg95/: CMakeLists.txt  ewf_example.config.h  main.c
examples/WIN32/sample_ewf_info_freertos_bg96/: CMakeLists.txt  ewf_example.config.h  main.c
examples/WIN32/sample_ewf_info_freertos_winsock2/: CMakeLists.txt  main.c
examples/WIN32/sample_ewf_info_tx_bg95/: CMakeLists.txt  ewf_example.config.h  ewf_example.config.h.andres  sample_info.c
examples/WIN32/sample_ewf_info_tx_bg96/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_emw3080b/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_esp8266/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_esp8285/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_esp_wroom_02/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_exs82_w/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_lora_e5/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_ryz014/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_ryz024a/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_sim7000/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_sim868/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_sim900/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_tx_winsock2/: CMakeLists.txt  sample_info.c
examples/WIN32/sample_ewf_info_win32_bg95/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_win32_bg96/: CMakeLists.txt  ewf_example.config.h  sample_info.c
examples/WIN32/sample_ewf_info_win32_winsock2/: CMakeLists.txt  sample_info.c
examples/WIN32/sample_ewf_iot_pnp_provisioning_tx_bg96/: CMakeLists.txt  sample_pnp_provisioning_telemetry.c
examples/WIN32/sample_ewf_iot_provisioning_tx_bg96/: CMakeLists.txt  sample_provisioning_telemetry.c
examples/WIN32/sample_ewf_lwip_freertos_ppp_bg96/: CMakeLists.txt  ewf.config.h  ewf_example.config.h  main.c
examples/WIN32/sample_ewf_lwip_freertos_ppp_exs82_w/: CMakeLists.txt  FreeRTOSConfig.h  ewf_example.config.h  main.c
examples/WIN32/sample_ewf_lwip_freertos_ppp_ryz024a/: CMakeLists.txt  ewf.config.h  ewf_example.config.h  main.c
examples/WIN32/sample_ewf_netx_duo_azure_iot_embedded_sdk_bg95/: CMakeLists.txt  ewf_example.config.h  main.c  sample_config.h.andres
examples/WIN32/sample_ewf_netx_duo_azure_iot_embedded_sdk_bg96/: CMakeLists.txt  ewf_example.config.h  main.c
examples/WIN32/sample_ewf_netx_duo_azure_iot_embedded_sdk_emw3080b/: CMakeLists.txt  main.c
(+5834 files in other folders)
